--- a/biz.webgate.notes.mailsignaturemanager/Forms/(dlgPreview).form
+++ b/biz.webgate.notes.mailsignaturemanager/Forms/(dlgPreview).form
@@ -1,16 +1,18 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' replicaid='C1257C1E002C398C'>
-<noteinfo noteid='32e' unid='2130F2B23621F0B5C12577F90057C2B9' sequence='100'>
+<noteinfo noteid='32e' unid='2130F2B23621F0B5C12577F90057C2B9' sequence='102'>
 <created><datetime>20101214T165834,81+01</datetime></created>
-<modified><datetime>20131109T095355,61+01</datetime></modified>
-<revised><datetime>20131109T095355,60+01</datetime></revised>
-<lastaccessed><datetime>20131109T095355,61+01</datetime></lastaccessed>
+<modified><datetime>20131111T154204,41+01</datetime></modified>
+<revised><datetime>20131111T154204,40+01</datetime></revised>
+<lastaccessed><datetime>20131111T154204,41+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090306,81+01</datetime></addedtofile></noteinfo>
-<updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=lpiic05p7/O=iic</name><name
->CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name><name
->CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
+<updatedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
 <wassignedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
+<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
+<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111326,17+02</datetime></item>
+<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113701,15+02</datetime></item>
+<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
 <item name='$HTMLCode' sign='true'>
 <rawitemdata type='1'>
 X/8QAAIADwAHAAAAAAAAAA==
@@ -21,15 +23,11 @@ X/8QAAIADwAHAAAAAAAAAA==
 hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text>CD</text></item>
-<item name='$DesignerVersion' sign='true'><text>8.5.2</text></item>
+<item name='$DesignerVersion'><text>8.5.3</text></item>
 <item name='Signatur_Rich' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
 <item name='$FIELDS'><text>Signatur_Rich</text></item>
-<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
-<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111326,17+02</datetime></item>
-<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113701,15+02</datetime></item>
-<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>dlgPreview</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
@@ -43,26 +41,10 @@ OgAAAAAACgACAAIAAgACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAABb
 /yoAAAAAAAMAEwAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAQm9yZGVyMDHeBgEA+/+jDqAFKAA8AAAA
 AAACAKQSAAC+BXY2AAAAAwAAAQEBAIECgv9aAAMAAAAAAAAAAAC+BXY2vgUAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACGAQAAAABUhwAAAAAAAAAAAAAAAAEAAAAEAAAA
-gwQDAIX/CAABAAAKgQKC/1oABAAAAAAAAAAAAL4FdjbNBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSFAAAAAA8AAAAAAAAAAQAAAAQAAACDBAQA3QYBAPv/
-+/8sAAAAAAACAQAAAAAAAAAABAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAABc/z4AAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADgAAAAAAAAABAAAKAAAAAAEAAAAAAN4GAQD7/88O
-zQUoADwAAAAAAEIA0BIAAM0FMDYAAFUCEREBAQAAgQKC/1oABQAAAAAAAAAAANwFMDbcBQAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFSHAAAAAAAAAAAAAAAA
-AQAAAAQAAACDBAUAhf8IAAEAAAqBAoMEBQCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAiv9MAIIAAQAAAAIAAAAAAAACAQAAChoAAAAAAAAADQAAAAAAGgAAABgABQANAFNpZ25h
-dHVyX1JpY2gAAwBTaWduYXR1cl9SaWNoAGIOAQCEAAAAAAABAAAA3gYAAIr/hf8IAAEAAAqBAoME
-BQCF/wgAAQAACuP/jABTaWduYXR1ciBmgXIgUmVsZWFzZSA4LjUueAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA0BIBAM0FMDYAAFUCEREBAQAAgQKD
-BAUAhf8IAAEAAAqBAoMEBQCF/wgAAQAACt0GAACK//7/UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAHgAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiv9A
-AIABAAUAAAIAAAAAAAACAQAAChQAAAAAAAAACAAAAAAAFAAAABIABQAIAFNpZ25hdHVyAwBTaWdu
-YXR1cmIOAQCEAAAAAAABAAAA3gYAAIr/hf8IAAEAAAqBAoMEBQCF/wgAAQAACuP/jABTaWduYXR1
-ciBmgXIgUmVsZWFzZSA3LjAueC84LjB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAIA0QYAAAAAgQKDBAMAhf8IAAEAAArTCAEA////AKUGAAAAAIECgwQBAIX/
-CAABAAAK
+gwQDAIX/CAABAAAKgQKDBAMAhf8IAAEAAArdBgAAiv/+/1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAB4AHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIr/
+TACCAAEAAAACAAAAAAAAAgEAAAoaAAAAAAAAAA0AAAAAABoAAAAYAAUADQBTaWduYXR1cl9SaWNo
+AAMAU2lnbmF0dXJfUmljaABiDgEAhAAAAAAAAQAAAN4GAACK/4X/CAABAAAKgQKDBAMAhf8IAAEA
+AArTCAEA////AKUGAAAAAIECgwQBAIX/CAABAAAK
 </rawitemdata></item></note>
 
